<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="activity_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="app_name_1">Spotify Streamer</string>
    <string name="app_name_2">Scores App</string>
    <string name="app_name_3">Library App</string>
    <string name="app_name_4">Build It Bigger</string>
    <string name="app_name_5">XYZ Reader</string>
    <string name="app_name_6">Capstone: My own app</string>
</resources>
