<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="48dp"
    android:paddingRight="48dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_title"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:textSize="@dimen/abc_text_size_title_material" />

    <Button
        style="@style/ButtonFormat"
        android:text="@string/app_name_1"
         />

    <Button
        style="@style/ButtonFormat"
        android:text="@string/app_name_2"
        />

    <Button
        style="@style/ButtonFormat"
        android:text="@string/app_name_3"
        />

    <Button
        style="@style/ButtonFormat"
        android:text="@string/app_name_4"
        />

    <Button
        style="@style/ButtonFormat"
        android:text="@string/app_name_5"
        />

    <Button
        style="@style/ButtonFormat"
        android:text="@string/app_name_6"
        android:background="@color/red"
        />

</LinearLayout>